# epimneme

./: .dockerignore  .env.example  .gitignore  AI_TOOLBOX.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ENGRAM2_HIGH_RECALL_SPEC.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.example.yml  pyproject.toml
benchmarks/: BENCHMARK_RESULTS.md  DATA.md  ablation_beam.sh  analyze_pref_misses.py  beam_bench.py  beir_bench.py  compare_pref.py  compare_runs.py  convomem_bench.py  convomem_diagnose.py  download_data.sh  engram_client.py  epimneme_client.py  lme_e2e_bench.py  lme_report.py  locomo_bench.py  longmemeval_bench.py  mabench_bench.py  metrics.py  near_miss_analysis_v100.txt  requirements.txt  results_engram2_lme_turnpair_9miss.jsonl  results_engram2_lme_v070_20260509_0949.jsonl  results_engram_beam_100K_v120_20260510_0155.json  results_engram_beam_100K_v302_20260512_0811.json  results_engram_beam_1M_v120_20260510_0234.json  results_engram_beam_1M_v302_20260512_0839.json  results_engram_beam_500K_v120_20260510_0203.json  results_engram_beam_500K_v302_20260512_0814.json  results_engram_beam_abl-all-off_20260512_1159.json  results_engram_beam_abl-all-off_20260512_1259.json  results_engram_beam_abl-no-bm25_20260512_1159.json  results_engram_beam_abl-no-bm25_20260512_1259.json  results_engram_beam_abl-no-date_20260512_1201.json  results_engram_beam_abl-no-date_20260512_1300.json  results_engram_beam_abl-no-entity_20260512_1200.json  results_engram_beam_abl-no-entity_20260512_1300.json  results_engram_beam_abl-no-recency-turnpair_20260512_1201.json  results_engram_beam_abl-no-recency-turnpair_20260512_1301.json  (+26 more)
(+60 files in other folders)
